<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.Sobre"
        android:screenOrientation="portrait"
        android:background="@drawable/gradient_background">

    <ImageView
            android:id="@+id/ivLogoSobre"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:src="@drawable/logo_etracking"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.45"
            android:contentDescription="@string/img_logo"/>
    <TextView
            android:text="@string/app_name"
            android:layout_height="wrap_content"
            android:id="@+id/tvAppSobre" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ivLogoSobre" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_width="wrap_content"
            android:textColor="@color/colorTextIcons" android:textStyle="bold" android:textSize="@dimen/app_name_size"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvVersaoSobre" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:textSize="@dimen/versao_size"
            android:text="@string/versao" android:textColor="@color/colorPrimaryText"/>
    <TextView
            android:text="@string/slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSloganSobre" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/tvAppSobre" android:textSize="@dimen/label_font_size"
            android:textColor="@color/colorSecondaryText"/>
    <TextView
            android:text="@string/turma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTurma" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tvSloganSobre" android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/label_font_size"/>
    <TextView
            android:text="@string/curso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvCurso" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTurma" android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/label_font_size"/>
    <TextView
            android:text="@string/aluno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvAluno" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvCurso" android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/label_font_size"/>
    <TextView
            android:text="@string/rm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRM" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvAluno" android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/label_font_size"/>
    <ImageView
            android:src="@drawable/help_browser_2"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/logo_sm_size_height"
            android:id="@+id/ivSobre" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:contentDescription="@string/img_topo_sobre"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/title_topo_sobre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSobre" android:textSize="@dimen/title_font_size"
            android:textColor="@color/colorPrimaryText" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ivSobre"/>

</android.support.constraint.ConstraintLayout>